log
Thu 21 Mar 2024 02:45:21 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:52:14: error: ‘lista’ undeclared (first use in this function)
   52 |     pushBack(lista, valor);
      |              ^~~~~
exercises.c:52:14: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
149c893
Thu 21 Mar 2024 02:45:42 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
2429d81
Thu 21 Mar 2024 02:46:57 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:66:23: error: implicit declaration of function ‘length’ [-Werror=implicit-function-declaration]
   66 |   for (int i = 0; i < length(L); i++)
      |                       ^~~~~~
exercises.c:68:20: error: implicit declaration of function ‘get’; did you mean ‘getw’? [-Werror=implicit-function-declaration]
   68 |     suma += *(int*)get(L, i);
      |                    ^~~
      |                    getw
exercises.c:68:14: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   68 |     suma += *(int*)get(L, i);
      |              ^
cc1: all warnings being treated as errors
Compilation failed
13ddd65
Thu 21 Mar 2024 02:47:10 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:68:20: error: implicit declaration of function ‘get’; did you mean ‘getw’? [-Werror=implicit-function-declaration]
   68 |     suma += *(int*)get(L, i);
      |                    ^~~
      |                    getw
exercises.c:68:14: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   68 |     suma += *(int*)get(L, i);
      |              ^
cc1: all warnings being treated as errors
Compilation failed
94d4994
Thu 21 Mar 2024 02:47:30 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:68:13: error: ‘l’ undeclared (first use in this function)
   68 |     suma += l[i];
      |             ^
exercises.c:68:13: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
a85a053
Thu 21 Mar 2024 02:47:37 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:68:14: error: invalid use of undefined type ‘struct List’
   68 |     suma += L[i];
      |              ^
exercises.c:68:13: error: invalid use of incomplete typedef ‘List’
   68 |     suma += L[i];
      |             ^
Compilation failed
1d93426
Thu 21 Mar 2024 02:49:44 PM UTC: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:69:19: error: invalid use of incomplete typedef ‘List’
   69 |       suma += temp->data;
      |                   ^~
exercises.c:70:18: error: invalid use of incomplete typedef ‘List’
   70 |       temp = temp->next;
      |                  ^~
Compilation failed
1592c98
Thu 21 Mar 2024 02:51:39 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:69:19: error: invalid use of incomplete typedef ‘List’
   69 |       suma += temp->current;
      |                   ^~
exercises.c:70:18: error: invalid use of incomplete typedef ‘List’
   70 |       temp = temp->current;
      |                  ^~
Compilation failed
c29b209
Thu 21 Mar 2024 02:51:49 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:69:19: error: ‘temp’ is a pointer; did you mean to use ‘->’?
   69 |       suma += temp.current;
      |                   ^
      |                   ->
exercises.c:70:18: error: ‘temp’ is a pointer; did you mean to use ‘->’?
   70 |       temp = temp.current;
      |                  ^
      |                  ->
Compilation failed
23637aa
Thu 21 Mar 2024 02:54:05 PM UTC: 
 exercises.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  1|4
total_score: 10/70
859dc8d
Thu 21 Mar 2024 02:54:16 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
1fa9a5a
Thu 21 Mar 2024 02:54:32 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:70:18: error: subscripted value is neither array nor pointer nor vector
   70 |     suma += largo[i]);
      |                  ^
exercises.c:70:21: error: expected ‘;’ before ‘)’ token
   70 |     suma += largo[i]);
      |                     ^
      |                     ;
exercises.c:68:3: error: this ‘for’ clause does not guard... [-Werror=misleading-indentation]
   68 |   for (int i = 0; i < largo; i++)
      |   ^~~
exercises.c:70:21: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
   70 |     suma += largo[i]);
      |                     ^
exercises.c:70:21: error: expected statement before ‘)’ token
cc1: all warnings being treated as errors
Compilation failed
5a70b2c
Thu 21 Mar 2024 02:54:39 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:70:18: error: subscripted value is neither array nor pointer nor vector
   70 |     suma += largo[i];
      |                  ^
Compilation failed
82299fe
Thu 21 Mar 2024 02:55:24 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:70:18: error: subscripted value is neither array nor pointer nor vector
   70 |     suma += largo[i];
      |                  ^
Compilation failed
9fb915c
Thu 21 Mar 2024 02:55:37 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
23b17ff
Thu 21 Mar 2024 02:55:50 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
d391c41
